# BINP-code

./: .gitignore  tags
BINP/: CMakeLists.txt
BINP/doc/: tp1.odt  tp3.odt  tp4.odt  tp5.odt
BINP/img/: head2.pgm  mixer.pgm  otter.pbm  ottre.pgm  ottre.pnm  water.pgm
BINP/tp/: CMakeLists.txt  tp1.cpp  tp3.cpp  tp4.cpp  tp5.cpp  tp6.cpp
IHM/: CMakeLists.txt  GraphicsImageScene.cpp  GraphicsImageScene.h~  \  main.cpp
IHM/tp1/: CMakeCache.txt
IHM/tp1/tp1/: CMakeCache.txt  CMakeLists.txt  ImageConverter.h  Makefile  cmake_install.cmake  graphicsimagescene.cpp  graphicsimageview.cpp  graphicsimageview.h  main.cpp  mainwindow.cpp  mainwindow.h  tp1.pro
IHM/tp1/tp1-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/: Makefile  moc_graphicsimagescene.cpp  moc_graphicsimageview.cpp  moc_mainwindow.cpp  tp1  ui_mainwindow.h
IHM/tp1/tp1/models/: AbstractModel.cpp  AbstractModel.h  InpaintingModel.cpp  InpaintingModel.h  ResizeModel.cpp  ResizeModel.h
IHM/tp1/tp1/presenters/: AbstractPresenter.cpp  AbstractPresenter.h  InpaintingPresenter.cpp  InpaintingPresenter.h  ResizePresenter.cpp  ResizePresenter.h
IHM/tp1/tp1/views/: AbstractParametersWidget.cpp  AbstractParametersWidget.h  GraphicsImageScene.cpp  GraphicsImageScene.h  GraphicsImageView.cpp  GraphicsImageView.h  InpaintingParameterWidget.cpp  InpaintingParameterWidget.h  InpaintingParametersWidget.cpp  InpaintingParametersWidget.h  MainWindow.cpp  MainWindow.h  ResizeImageParametersWidget.cpp  ResizeImageParametersWidget.h
SI/WEBGL/: gltp1.html  gltp3c.html
SI/WEBGL/textures/: crate.xcf  crate_normals.xcf
TIA/include_perso/: Makefile  mati_utils.c  mati_utils.h
TIA/res/: 2  Makefile  bruit.tiff  croix_inv.tiff  debruit.tiff  debruit2x.tiff  fft-a-prog.cpp  fft-a-prog.h  fft_im.pgm  fft_im_inv.pgm  fftdebruit2x.tiff  gauss50.tiff  gaussani10.tiff  imagesRW.cpp  lena.tiff  lena_ttf.tiff  main-fft  main-fft.cpp  mire_sinusoidale.pgm  module-fft.cpp  module-fft.cpp~  module-fft.h  resul1d.txt  resul2d.txt  sauve_pgm.txt  test1d.txt  test2d.txt  test2d.txt.2  test2d.txt.3  test2d.txt.4  test2d.txt.5
TIA/res/doc/: rapport.odt
TIA/res/images/: disque.pgm  image_bruitee.pgm  lena_offset.pgm  lenaessai.pgm
TIA/seam/: .tpSeam.cpp.swp  Makefile  energie.pgm  energie.tiff  imagesRW.h  loup_reduced.pgm  mer_mask_reduced.pgm  mer_reduced.pgm  reduced.tiff  reduced2.tiff  seams.tiff  tpSeam  tpSeam.cpp
TIA/seam/rapport/: Makefile  seam_carving.tex
TIA/tpEval/images/: circuit_nb.pgm  rect_bin.pgm  trotro_00.pgm  trotro_01.pgm  trotro_02.pgm
TIA/tpEval/rapport/: Makefile  tpEval.tex
TIA/tpEval/src/: Makefile  mati_utils.c  mati_utils.h  morpho_fonctionnelle.c  morpho_fonctionnelle.h  tp_eval  tp_eval.c  tp_eval.param  traitements_morpho.c  traitements_morpho.h
TIA/tpFiltrage/images/: alpes.pgm  basket1.pgm  bateaux.pgm  calen0.pgm  croix.pgm  foret.pgm  journal1_394.pgm
TIA/tpFiltrage/rapport/: .filtrage.tex.swo  Makefile  filtrage.tex  seam_carving.tex
TIA/tpFiltrage/src/: Makefile  tp_filtrage.c  tp_filtrage.param
TIA/tpMorpho/: libit_setup_cmd.txt  libit_utils.txt  tp_morpho.m
TIA/tpMorpho/images/: bjork.pgm  image1_bin.pgm  image2_bin.pgm  lena.pgm  sati.pgm  test_operateur_bin.pgm
TIA/tpMorpho/results/: out.pgm
TIA/tpMorpho/src/: Makefile  morpho_fonctionnelle.c  operateurs_morpho_binaire.c  operateurs_morpho_binaire.h  tp_morpho  (+4 more)
doc/: .~lock.tp1.odt#  .~lock.tp2.odt#  .~lock.tp3.odt#  tp1.odt  tp2.odt  tp3.odt
img/: baboon_jpg.ppm  head.pgm  otrte.pgm  otter.pgm  otter.pnm
tp/: CMakeLists.txt  tp0.cpp  tp1.cpp  tp2.cpp  tp3.cpp  tp3.cpp~  tp4.cpp  tp5.cpp  tp6.cpp
(+50 files in other folders)
